updata code lan 2

--- a/trangchu.html
+++ b/trangchu.html
@@ -8,5 +8,6 @@
 <body>
     <h1>ngô hoàng phúc</h1>
     <h1>Học tập để chở lên tốt hơn</h1>
+    <h1>Học tập để chở lên tốt hơn</h1>
 </body>
 </html>
